# StockPredictors

./: .gitattributes  .gitignore  .windsurfrules  AAPL_data.csv  CACHING_PLAN.md  CLAUDE.md  DARK_MODE_PLAN.md  HANDOFF.md  MSFT_data.csv  NVDA_data.csv  PROGRESS.md  TSLA_data.csv  UI_UX_PLAN.md  Untitled-1.ipynb  app.py  app2.py  contextvector.py  data_handler.py  data_processor.py  display_market_status.py  feature_engineering.py  main.py  market_status_helpers.py  model - Copy.py  model.py  model_utils.py  pipeline.py  pyproject.toml  render_helpers.py  render_preds_processor.py  render_ui.py  requirements - Copy.txt  requirements.txt  rules.py  session_state.py  settings.json  stock_predictor.py  stock_predictors.py  trace_utils.py  ui_helpers.py  (+2 more)
.claude/: agentic-loop.json  settings.json
.claude/skills/dev-workflow/: SKILL.md
.github/: copilot-instructions.md
.streamlit/: config.toml
Playground/: play1.py  play2.py  playmain.py  playstock_predictors - Copy.py  playstock_predictors.py
archive/plans/: DARK_MODE_PLAN.md
initializers/: initializer.py
models/: base_model.py  linear_reg_model.py
tests/: run_streamlit_yfinance_down.py  test_chart_chrome.py  test_close_color_deltas.py  test_customer_facing_ui.py  test_dark_theme.py  test_data_handler_cache.py  test_data_wiring.py  test_header.py  test_market_status.py  test_prediction_cards.py  test_search_validation.py  test_stats_panel.py  test_yfinance_provider_status.py
